k8/scaleway/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quote-ingress
  namespace: scaleway-quote-k8
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - YOUR_DOMAIN.COM
      secretName: quote-tls-secret
  rules:
    - host: YOUR_DOMAIN.COM
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quote-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: quote-api-service
                port:
                  number: 80
